force-app/main/default/objects/Service_Type__c/Service_Type__c.object-meta.xml
<CustomObject>
    <description>A type of municipal service; links a form to a department and default SLA.</description>
    <label>Service Type</label>
    <nameField><label>Service Type Name</label><type>Text</type></nameField>
    <pluralLabel>Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>