force-app/main/default/objects/Service_Type__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Lookup</type>
    <referenceTo>Authority__c</referenceTo>
    <relationshipLabel>Service Types</relationshipLabel>
    <relationshipName>Service_Types</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>