force-app/main/default/objects/Service_Type__c/fields/Default_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_SLA_Hours__c</fullName>
    <defaultValue>72</defaultValue>
    <label>Default SLA (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>