force-app/main/default/objects/Service_Type__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Service Types</relationshipLabel>
    <relationshipName>Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>